[package]
name = "mcp2515"
description = "`#![no_std]` library for interacting with MCP2515 CAN controller chips."
version = "0.3.1"
authors = ["Forked Version: Zachary Duve, Original Author: David Cole"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZacharyDuve/mcp2515-rs"
categories = ["no-std", "embedded"]
keywords = ["can", "mcp2515"]

[dependencies]
bitflags = "1.3.2"
embedded-hal = { version = "1.0.0" }
modular-bitfield = "0.11.2"
nb = "1.0.0"
void = { version = "1.0.2", default-features = false }

defmt = { version = "0.3.2", optional = true }
ufmt = { version = "0.2.0", optional = true }
embedded-can = "0.4.1"
